--- a/web/src/app/app.component.html
+++ b/web/src/app/app.component.html
@@ -7,19 +7,16 @@
     <div class="filter">
       <nb-select 
         placeholder="All Years" 
+        scrollStrategy="reposition"
         [(selected)]="year" 
         (selectedChange)="selectedYearChanged($event)"
       >
-        <nb-option>All Years</nb-option>
-        <nb-option value="2023">2023</nb-option>
-        <nb-option value="2022">2022</nb-option>
-        <nb-option value="2021">2021</nb-option>
-        <nb-option value="2020">2020</nb-option>
-        <nb-option value="2019">2019</nb-option>
-        <nb-option value="2018">2018</nb-option>
+        <nb-option >All Years</nb-option>
+        <nb-option *ngFor='let item of [].constructor(10); let i = index' [value]="(2023 - i).toString()">{{ 2023 - i }}</nb-option>
       </nb-select>
       <nb-select 
         placeholder="All Months"
+        scrollStrategy="reposition"
         [disabled]="year == undefined"
         [(selected)]="month"
         (selectedChange)="selectedMonthChanged($event)"
@@ -39,14 +36,18 @@
         <nb-option value="12">December</nb-option>
       </nb-select>
     </div>
+    <div class="trailing">
+      <button nbButton shape="round" size="small" status="info" *ngIf="selectedPost" (click)="deselectPost()">
+        <nb-icon icon="close"></nb-icon>
+      </button>
+    </div>
   </nb-layout-header>
   <nb-layout-column><router-outlet></router-outlet></nb-layout-column>
   <nb-sidebar responsive [(state)]="sidebarState">
-    <div *ngIf="response$ | async as response">
+    <nb-sidebar-header>
       <nb-list>
         <nb-list-item 
           routerLink="/posts"
-          [queryParams]="{selected: null}" 
           queryParamsHandling="merge"
           routerLinkActive="active"
           [routerLinkActiveOptions]="{ exact: true }"
@@ -57,6 +58,10 @@
           <nb-icon icon="grid"></nb-icon>
           <div *ngIf="sidebarState != 'compacted'">All Posts</div>
         </nb-list-item>
+      </nb-list>
+    </nb-sidebar-header>
+    <div *ngIf="response$ | async as response">
+      <nb-list>
         <nb-list-item 
           *ngFor="let profile of response.profiles"
           [routerLink]="['/', profile.username]"
