--- a/web/src/app/posts-grid/posts-grid.component.html
+++ b/web/src/app/posts-grid/posts-grid.component.html
@@ -34,6 +34,9 @@
     </div>
   </ng-template>
   <div class="detail">
-    <post-detail *ngIf="selectedPost$ | async as selectedPost" [post]="selectedPost"></post-detail>
+    <post-detail *ngIf="selectedPost$ | async as selectedPost; else profileInfo" [post]="selectedPost"></post-detail>
+    <ng-template #profileInfo>
+      <profile-info *ngIf="selectedUsername$ | async as selectedUsername" [username]="selectedUsername"></profile-info>
+    </ng-template>
   </div>
 </div>
