--- a/web/src/app/posts-grid/posts-grid.component.html
+++ b/web/src/app/posts-grid/posts-grid.component.html
@@ -1,15 +1,7 @@
 <div class="container">
-  <div 
-    *ngIf="response$ | async as response; else loading" 
-    class="grid" 
-    infiniteScroll
-    [infiniteScrollDistance]="2"
-    [infiniteScrollThrottle]="50"
-    (scrolled)="onScroll()"
-  >
-    <ng-template ngFor let-shortcode [ngForOf]="postService.shortcodes">
+  <div class="grid" infiniteScroll (scrolled)="getNextPage()">
+    <ng-template ngFor let-post [ngForOf]="posts.values()">
       <div 
-        *ngIf="postService.getCached(shortcode) as post"
         [routerLink]="[]"
         [queryParams]="{selected: post.shortcode}"
         queryParamsHandling="merge"
@@ -28,18 +20,8 @@
         </div>
       </div>
     </ng-template>
-    <ng-template [ngIf]="response.posts.length < 5">
-      <div *ngFor="let i of [].constructor(10)"></div>
-    </ng-template>
+    <div *ngFor="let i of [].constructor(10)"></div>
   </div>
-  <ng-template #loading>
-    <div class="loading">
-      <nb-card [nbSpinner]="true" nbSpinnerSize="medium" nbSpinnerStatus="info">
-        <nb-card-body></nb-card-body>
-      </nb-card>
-      <h5>Loading Posts ...</h5>
-    </div>
-  </ng-template>
   <div class="detail">
     <post-detail *ngIf="selectedPost$ | async as selectedPost; else profileInfo" [post]="selectedPost"></post-detail>
     <ng-template #profileInfo>
