--- a/web/src/app/app.component.html
+++ b/web/src/app/app.component.html
@@ -81,5 +81,8 @@
         </nb-list-item>
       </nb-list>
     </div>
+    <nb-sidebar-footer>
+      <input type="text" nbInput placeholder="Search">
+    </nb-sidebar-footer>
   </nb-sidebar>
  </nb-layout>
