--- a/web/src/app/app.component.scss
+++ b/web/src/app/app.component.scss
@@ -45,3 +45,12 @@ nb-sidebar nb-list-item.all-posts {
     font-weight: 600;
   }
 }
+
+@include nb-install-component() {
+  nb-sidebar nb-sidebar-footer {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border-top: nb-theme(list-item-divider-width) nb-theme(list-item-divider-style) nb-theme(list-item-divider-color);
+  }
+}
