only show sidebar when expanded

--- a/web/src/app/app.component.html
+++ b/web/src/app/app.component.html
@@ -81,7 +81,7 @@
         </nb-list-item>
       </nb-list>
     </div>
-    <nb-sidebar-footer>
+    <nb-sidebar-footer *ngIf="sidebarState == 'expanded'">
       <input type="text" nbInput placeholder="Search" [(ngModel)]="searchText" (input)="loadProfiles()">
     </nb-sidebar-footer>
   </nb-sidebar>
